# v0-osap-formal-core

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  UPLOAD_INSTRUCTIONS.md  pyproject.toml  pytest.ini
coq/: .Makefile.coq.d  Makefile  _CoqProject
docs/: architecture.md  formal_core_summary.md  status_and_nonclaims.md  theorem_register.md
fixtures/: manifest.json
lean/: V0OSAP.lean  lakefile.toml
release/: RELEASE_NOTES_v1.2.0.md  bootstrap_manifest.json  closure_preflight.txt  compiler_versions.json
scripts/: bootstrap_gate3_cluster_b_wp0.sh  build_gate3_cluster_b_wp0_post_merge_closeout.py  build_gate3_cluster_b_wp1.py  build_gate3_cluster_b_wp1_post_merge_closeout.py  build_gate3_cluster_b_wp2.py  build_gate3_cluster_b_wp2_post_merge_closeout.py  build_gate3_cluster_b_wp3.py  build_gate3_cluster_b_wp3_post_merge_closeout.py  build_gate3_cluster_b_wp4.py  build_gate3_cluster_b_wp4_post_merge_closeout.py  build_gate3_cluster_b_wp5.py  build_gate3_cluster_b_wp5_post_merge_closeout.py  build_gate3_cluster_b_wp5_sync_helper_repair.py  build_gate3_cluster_b_wp6.py  build_gate3_cluster_b_wp6_post_merge_closeout.py  build_manifest.py  build_rc1_release_closure_manifest.py  build_rc1_release_evidence_closure_manifest.py  build_rc1_release_inventory.py  build_rc1_tag_authorization_manifest.py  build_v1_3_0_final_release_authorization_manifest.py  build_v1_3_0_final_release_evidence_closure_manifest.py  build_v1_3_0_post_merge_archival_closeout_manifest.py  build_v1_3_0_zenodo_publication_evidence_closure_manifest.py  (+79 more)
(+716 files in other folders)
