[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v0-osap-fc1"
version = "0.1.0"
description = "Executable checker for the V0 OSAP FC-1 registry fragment"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Dmytro Panasenko"}]
dependencies = [
  "jsonschema>=4.23,<5",
  "referencing>=0.35,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
v0-osap-fc1 = "v0_osap_fc1.cli:main"

[tool.setuptools]
package-dir = {"" = "checker"}

[tool.setuptools.packages.find]
where = ["checker"]

[tool.pytest.ini_options]
pythonpath = ["checker"]
testpaths = ["tests"]
addopts = "-ra"
